[gd_scene load_steps=2 format=3 uid="uid://dopmg8b6wbcv5"]

[ext_resource type="Script" path="res://game/Bugs/bug_spawner.gd" id="1_pw4be"]

[node name="BugSpawner" type="Node2D"]
script = ExtResource("1_pw4be")

[node name="SpawnBugTimer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[connection signal="timeout" from="SpawnBugTimer" to="." method="_on_spawn_bug_timer_timeout"]
